--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -24,6 +24,7 @@
 @import 'modules/_icon';
 @import 'modules/_numberbox';
 @import 'modules/_doubleslider';
+@import 'modules/_nav-list';
 
 
 @import 'page/_project';
