--- a/app/assets/styles/base/_typo.css
+++ b/app/assets/styles/base/_typo.css
@@ -12,6 +12,14 @@ h1 {
     font-weight: 700;
 }
 
+.h--small {
+    line-height: 1.8;
+    font-size: 18px;
+    color: #303030;
+    letter-spacing: .3px;
+    font-weight: 400; 
+}
+
 .p--desc {  /* paragraph - description */
     line-height: 1.8;
     font-size: 16px;
