--- a/app/assets/styles/modules/_section.css
+++ b/app/assets/styles/modules/_section.css
@@ -33,7 +33,8 @@
     &__container--full {
         max-width: 960px;
         padding: 0 32px;
-        margin: 130px auto;      
+        margin: 130px auto; 
+        overflow: hidden;     
     }
 
     &__illust {
@@ -115,10 +116,10 @@
     &__heading {
         margin-top: 20px;
         transform: translateY(10px);
-        font-size: 24px;
-        font-weight: 500;
+        font-size: 22px;
+        font-weight: 400;
         line-height: 1.4;
-        letter-spacing: -0.8px;
+        letter-spacing: -0.6px;
         /* color: $heading-black; */
         /* margin-top: 30px; */
         transform: translateX(-2px); /* aligned to the left */
