--- a/app/assets/styles/page/_project.css
+++ b/app/assets/styles/page/_project.css
@@ -14,6 +14,12 @@
             justify-content: center;
             align-items: center;
         }
+
+        &--full-color {
+            width: 100%;
+            height: 400px;  
+            background-color: #f8f5ff;   
+        }
     }
 
     &__col--flip-child-order {
@@ -60,6 +66,7 @@
 
     &__subtitle {
         font-size: 28px;
+        letter-spacing: -0.6px;
         font-weight: 400;
         color: #252525;
         margin-bottom: 42px;
