--- a/app/assets/styles/modules/_doubleslider.css
+++ b/app/assets/styles/modules/_doubleslider.css
@@ -33,8 +33,12 @@
 }
 
 .heading__accent {
-    margin-bottom: 10px;
+    margin: 20px 0;
     color: #8149ff;
+
+    @mixin atMedium {
+        margin: 0 0 15px 0;
+    }
 }
 
 
