--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -50,7 +50,8 @@
 .overlay-nav {
     /* opacity: 0; */
     width: 100%;
-    height: 100%;
+    height: 200%;
+    overflow: hidden;
     background-color: rgba(255, 255, 255, 1);
     position: fixed;
     top: 0;
@@ -58,6 +59,7 @@
     z-index: 150;
     transform: translate3d(-100%, 0, 0);
     transition: all 1s cubic-bezier(0.23, 1, 0.32, 1);
+    /* backface-visibility: hidden; */
 
     &--is-open {
         /* opacity: 1; */
@@ -98,6 +100,25 @@
     &__item {
         font-size: 24px;
         padding: 5px 0;
+        opacity: 0;
+        transform: translate3d(0, 3rem, 0);
+        .overlay-nav--is-open & {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+            transition-property: opacity, transform;
+            transition-duration: 1s, 1s;
+            transition-timing-function: cubic-bezier(0.23, 1, 0.32, 1);            
+        }
+
+        &:nth-child(1) {
+            transition-delay: 0.3s;
+        }
+        &:nth-child(2) {
+            transition-delay: 0.4s;
+        }
+        &:nth-child(3) {
+            transition-delay: 0.5s;
+        }
     }
 
     &__link {
@@ -106,7 +127,7 @@
 
     /* bottom part */
     &__bottom {
-        margin-top: 100px;
+        margin-top: 50px;
     }
 
     &__cta {
