--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -75,7 +75,11 @@
 
     &__content {
         /* border: 1px solid red; */
+        height: 75vh;
         margin-top: 50px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
     }
 
     /* Top */
@@ -94,7 +98,7 @@
 
     /* menu */
     &__list {
-        margin-top: 200px;
+        /* margin-top: 200px; */
     }
 
     &__item {
@@ -102,6 +106,7 @@
         padding: 5px 0;
         opacity: 0;
         transform: translate3d(0, 3rem, 0);
+
         .overlay-nav--is-open & {
             opacity: 1;
             transform: translate3d(0, 0, 0);
@@ -127,11 +132,16 @@
 
     /* bottom part */
     &__bottom {
-        margin-top: 50px;
+        /* margin-top: 50px; */
+        font-size: 14px;
     }
 
     &__cta {
+        font-size: 16px;
         padding: 15px 0;
+        & a {
+            color: #5938FF;
+        }
     }
 
     &__contact {
@@ -143,6 +153,11 @@
     }
 }
 
+.sns-item {
+    color: $grey-font;
+
+    &:first-child{ margin-right: 10px; }
+}
 
 .hamburger, .icon__close {
     width: 40px;
