--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -60,6 +60,9 @@
     transform: translate3d(-100%, 0, 0);
     transition: all 1s cubic-bezier(0.23, 1, 0.32, 1);
     /* backface-visibility: hidden; */
+    @mixin atMedium {
+        display: none;
+    }
 
     &--is-open {
         /* opacity: 1; */
