Completed main css styling

--- a/app/assets/styles/base/_utilities.css
+++ b/app/assets/styles/base/_utilities.css
@@ -49,3 +49,28 @@
 .js-no-scroll {
     overflow: hidden;
 }
+
+div#page {
+    opacity: 1;
+}
+
+#black-home-overlay{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 600;
+    /* visibility: hidden;
+    opacity: 0; */
+    background-color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 1.5s;
+}
+
+#black-home-overlay.fadeOut {
+    visibility: hidden;
+    opacity: 0;
+}
