--- a/app/assets/styles/base/_variables.css
+++ b/app/assets/styles/base/_variables.css
@@ -1,4 +1,4 @@
-$primaryCol: #412496;
+$primaryCol: #5030B1;
 $primaryCol-lighter: #8C73FF;
 $primaryCol-point: #9028EF;
 $primaryCol-lightest: #f8f5ff;
