--- a/app/assets/styles/base/_animation.css
+++ b/app/assets/styles/base/_animation.css
@@ -28,6 +28,14 @@
 	}
 }
 
+@keyframes fade {
+  0% {
+    transform: translate3d(0, -10px, 0);
+    opacity: 1; }
+  100% {
+    transform: translate3d(0, 0, 0);
+    opacity: 0; } }
+
 @keyframes fadeInThenMoveLeft {
 	0% {
 		opacity: 0;
