--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -1,14 +1,26 @@
 .btn {
     display: inline-block;
-    margin: 30px 0;
-    /* height: 62px; */
-    padding: 22px 45px;
+    /* margin: 30px 0 30px 32px; */
+    padding: 26px 58px;
 
-    &--underline {
-        background-color: #412496;
-        border-radius: 60px;
+    &--plain {
+        color: $primaryCol-point;
+    }
+
+    &--accent {
         color: #fff;
-        font-weight: 300;
+        background-color: #412496;
+        font-weight: 400;
+        letter-spacing: 1px;
+        text-align: center;
+        margin-top: 30px;
+        border-radius: 2px;
+    }
+
+    &--fill {
+        border: 1px solid #fff;
+        color: #fff;
+        font-weight: 400;
         font-size: 15px;
         letter-spacing: 1px;
     }
@@ -19,12 +31,18 @@
         align-items: center;
         position: absolute;
         z-index: 1;
-        width: 195px;
+        width: 200px;
         height: 45px;
         transform: rotate(90deg);
         background-color: #fff;
-        letter-spacing: .8px;
-        /* margin: 30px 0; */
+        letter-spacing: 1.6px;
+        font-size: 14px;
+        /* border-radius: 0 0 30px 30px; */
+        @mixin atMedium {
+            border-radius: 0 0 0 0;
+            width: 230px;
+            height: 75px;   
+        }
 
         &--top-right {
             top: 75px;
@@ -37,23 +55,23 @@
         }
 
         &--bottom-right{
-            bottom: 75px;
+            bottom: 80px;
             right: -80px;
 
             @mixin atMedium {
                 bottom: 0px;
-                /* left: 0; */
                 right: 0;
             }
         }
 
         &--f-bw {
-            color: rgb(50, 50, 50);
+            color: #fff;
+            background-color: $primaryCol;
         }
 
         @mixin atMedium {
             transform: rotate(0deg);
-            padding: 30px 100px;
+            padding: 30px 50px;
         }    
     }
 }
