--- a/app/assets/styles/modules/_card.css
+++ b/app/assets/styles/modules/_card.css
@@ -1,17 +1,20 @@
 .cards {
     margin-top: 30px;
-    
-    &__card { /* a */
-        /* border: 1px solid blue; */
-        display: block;
-        margin-bottom: 30px;
-        padding-bottom: 30px;
-        color: #505050;
-        border-bottom: 1px solid #E5E5E5;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    max-width: 500px;
 
-        @mixin atSmall {
-            /* width: 80%; */
-        }
+    @mixin atSmall {
+        max-width: 100%;
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    &__card { /* a */
+        flex-basis: 100%;
+        display: block;
+        color: #080808;
     }
 }
 
@@ -20,12 +23,10 @@
     display: flex;
     flex-direction: column;
 
-    @mixin atSmall {
-        flex-direction: row;
-    }
-
-    &__img-container {
-        flex-basis: 60%;
+    &__img {
+        width: 100%;
+        height: 300px;
+        object-fit: cover;
     }
 
     &__last {
@@ -33,28 +34,54 @@
         margin-bottom: 0;
     }
 
+    &__bottom {
+        display: flex;
+        width: 100%; 
+        /* border: 1px solid green; */
+        justify-content: space-between;
+        align-items: flex-end;
+        margin-top: 20px;
+        margin-bottom: 40px;
+    }
+
     &__info {
         padding:0 0px;
         display: flex;
         flex-direction: column;
+        /* border: 1px solid pink; */
+    }
 
-        @mixin atSmall {
-            justify-content: center;
-            padding-left: 20px;
-            flex-basis: 40%;
-        }
+    &__view {
+        display: block;
+        text-transform: uppercase;
+        color: #A484FF;
+        width: 50px;
+        letter-spacing: 1px;
+        height: 30px;
+        border-bottom: 1px solid #A484FF;
     }
 
     &__title {
-        margin-top: 10px;
+        /* margin-top: 10px; */
         font-weight: 400;
-        font-size: 18px;
+        font-size: 22px;
+        color: #080808;
+        /* background-color: $primaryCol; */
+        &--main {
+            display: inline; 
+            font-weight: 400; 
+            margin-right: 10px; 
+        }
+        &--sub {
+            display: inline;
+            /* color: $grey-font; */
+        }
     }
 
     &__meta {
         margin-top: 20px;
         font-size: 14px;
-        font-weight: 700;
+        /* font-weight: 700; */
         letter-spacing: .8px;
         color: #9B9B9B;
         /* color: $primaryCol-point; */
