--- a/app/assets/styles/modules/_section.css
+++ b/app/assets/styles/modules/_section.css
@@ -1,24 +1,37 @@
 .section {
-    padding-top: 60px; /* General sections for all pages */
+    padding-top: 80px; /* General sections for all pages */
 
     &__banner {
-        background-color: $primaryCol;
         text-align: center;
+        @mixin atMedium {
+            text-align: left;
+        }
         color: #fff;
+        margin-top: 100px;
         font-weight: 300;
-        padding-left: 70px;
-        padding-right: 70px; 
+        padding: 80px 32px;
+        /* margin: 0 auto; */
+
+        &-container {
+                    background-color: $primaryCol;
+
+        }
 
         &-eyebrow {
-            color: rgba(#ffffff, 0.7);
+            opacity: .8;
+            letter-spacing: 1px;
+            /* text-transform: uppercase; */
         }
 
         &-copy {
             margin-top: 15px;
-            line-height: 1.6;
+            line-height: 1.4;
             letter-spacing: 1px;
-            font-size: 20px;
-        }
+            font-size: 22px;
+            @mixin atMedium {
+                font-size: 32px;
+            }
+        }   
     }
 
     &__container { /* contain A-level */
@@ -45,6 +58,34 @@
         }
     }
 
+    &__myself {
+        position: relative;
+        &::before {
+            content:'UNDERSTAND';
+            font-size: 90px;
+            position: fixed;
+            z-index: -1;
+            right: 300px;
+            top: 80px;
+            color: rgb(255, 255, 255);
+            writing-mode: vertical-rl;
+            -webkit-writing-mode: vertical-rl;
+            -ms-writing-mode: tb-rl;
+            text-orientation: sideways;
+            opacity: .4;
+            text-shadow: 
+                rgb(230, 230, 230) 0px 0px 0px, 
+                rgb(230, 230, 230) 0px 2px 0px, 
+                rgb(230, 230, 230) 0px -2px 0px, 
+                rgb(230, 230, 230) 2px 0px 0px, 
+                rgb(230, 230, 230) 2px 2px 0px, 
+                rgb(230, 230, 230) 2px -2px 0px, 
+                rgb(230, 230, 230) -2px 0px 0px, 
+                rgb(230, 230, 230) -2px 2px 0px, 
+                rgb(230, 230, 230) -2px -2px 0px;
+        }
+    }
+
     /************** Each Block *************/
 
     &__header {  /* wrapper A-level */
@@ -66,15 +107,22 @@
 
         &-container {
             margin-top: 24px;
+            display: flex;
+            position: relative;
 
             & > img {
-                width: 100%;
+                display: block;
+                width: 500px;
                 height: 300px;
                 object-fit: cover;
             }
 
             & > .img1 {
                 margin-bottom: 20px;
+            }
+
+            & > .img2 {
+                display: none;
             }
 
             @mixin atMedium {
@@ -84,8 +132,13 @@
                     margin-bottom: 0;
                 }
 
+                 & > .img2 {
+                    display: block;
+                }
+                
+
                 & > img {
-                    width: 45%;
+                    width: 50%;
                 }
 
             }
@@ -94,8 +147,12 @@
 
     &__cta {   /* wrapper A-level */
         padding: 0 32px;
-        border: 1px solid red;
-        text-align: center;
+        display: flex;
+        justify-content: center;
+
+        @mixin atMedium {
+            justify-content: flex-start;
+        }
     }
 
     /************** Section Specific Elements *************/
@@ -103,26 +160,28 @@
     &__eyebrow {
        letter-spacing: 1.4px; 
        font-size: 14px;
-       font-weight: 500;
+       font-weight: 600;
        color: $primaryCol-point;
+       /* color: orangered; */
 
        &--bw1 { /* an inner part eyebrow of a certain section */
             color: #505050;
+            font-weight: 400;
             padding-top: 50px;
-            text-align: center;
+            /* text-align: center; */
        }
     }
 
     &__heading {
         margin-top: 20px;
+        margin-bottom: 30px;
         transform: translateY(10px);
-        font-size: 22px;
+        font-size: 28px;
         font-weight: 400;
         line-height: 1.4;
-        letter-spacing: -0.6px;
-        /* color: $heading-black; */
-        /* margin-top: 30px; */
+        letter-spacing: 0px;
         transform: translateX(-2px); /* aligned to the left */
+
         @mixin atSmall {
             font-size: 32px;
         }
