--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -1,17 +1,20 @@
 .site-footer {
-    background: linear-gradient(to top, rgba(125, 53, 214, 0.90) 0%, rgba(70, 23, 171, 0.90) 100%);
+    background-color: #5030B1;
     color: #fff;
     letter-spacing: .8px;
     position: relative;
     overflow: hidden;
+    margin-top: 100px;
 
     &__content {
         padding: 70px 0;
     }
 
     &__title {
-        font-size: 32px;
-        font-weight: 700;
+
+        max-width: 400px;
+        font-size: 42px;
+        font-weight: 400;
         letter-spacing: .6px;
         margin-bottom: 40px;
         /* text-transform: uppercase; */
