--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -25,6 +25,7 @@
 @import 'modules/_numberbox';
 @import 'modules/_doubleslider';
 @import 'modules/_nav-list';
+@import 'modules/_featured-work';
 
 
 @import 'page/_project';
