--- a/app/assets/styles/modules/_navigation.css
+++ b/app/assets/styles/modules/_navigation.css
@@ -258,17 +258,14 @@
 
 
 .secondary-nav { /* nav */
-    
     position: sticky;
-    background-color: #080808;
+    background-color: rgba(255, 255, 255, .1);
     z-index: 100;
     transition: all .35s ease-out;
-    /* top: 102px; */
-    top:0px;
-
-    /* margin-left: 80px; */
+    top: 0px;
     letter-spacing: 1px;
-    border-bottom: 1px solid #F0EEEE;
+    border-top: 1px solid #F0EEEE;
+    /* border-bottom: 1px solid #F0EEEE; */
 
     &-container {
         max-width: 1024px;
@@ -280,10 +277,6 @@
         display: flex;
         justify-content: flex-start;
         padding: 28px 32px 32px 32px;
-    }
-
-    &__item { /* li */
-
     }
 
     &__link { /* a */
