Retouched styling of home and herself page

--- a/app/assets/styles/base/_utilities.css
+++ b/app/assets/styles/base/_utilities.css
@@ -38,6 +38,10 @@
     background-color: #f8f5ff;
 }
 
+.bg--w {
+    background-color: #fff;
+}
+
 .no-mt {
     margin-top: 0;
 }
@@ -48,6 +52,10 @@
 
 .js-no-scroll {
     overflow: hidden;
+}
+
+.ph-small {
+    padding: 0 32px;
 }
 
 div#page {
