--- a/app/assets/styles/modules/_section.css
+++ b/app/assets/styles/modules/_section.css
@@ -41,14 +41,45 @@
         @mixin atMedium {
             padding-right: 20%;
         }
+
     }
 
+
     &__container--full {
+        display: flex;
+        flex-direction: column;
         max-width: 960px;
-        padding: 0 32px;
-        margin: 130px auto; 
-        overflow: hidden;     
+        margin: 60px auto; 
+        overflow: hidden; 
     }
+
+    &__img {
+
+        margin-top: 20px;
+        width: 50%;
+
+        @mixin atMedium {
+            width: 40%;
+            padding: 20px;
+        }
+
+        &-container {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 0 0 0 32px;
+            width: 100%;
+            
+            @mixin atMedium {
+                padding: 0;
+            }
+
+            &--to-left {
+                padding: 0 32px 0 0;
+            }
+        }
+    }
+
 
     &__illust {
         max-width: 700px;
@@ -88,7 +119,7 @@
 
             & > img {
                 display: block;
-                width: 500px;
+                width: 100%;
                 height: 300px;
                 object-fit: cover;
             }
@@ -102,6 +133,10 @@
             }
 
             @mixin atMedium {
+                & > img {
+                    width: 50%;
+                    height: 300px;
+                }
 
                 & > .img1 {
                     margin-right: 3%;
@@ -152,14 +187,17 @@
         margin-top: 20px;
         margin-bottom: 30px;
         transform: translateY(10px);
-        font-size: 28px;
+        font-size: 32px;
         font-weight: 400;
         line-height: 1.4;
-        letter-spacing: 0px;
+        letter-spacing: -.5px;
         transform: translateX(-2px); /* aligned to the left */
 
         @mixin atSmall {
             font-size: 32px;
+        }
+        &--center {
+            text-align: center;
         }
     }
 
@@ -167,7 +205,9 @@
         margin-top: 16px;
         font-weight: 400;
         line-height: 1.8;
-        letter-spacing: .5px; 
+        font-size: 18px;
+        letter-spacing: 0px; 
+        word-spacing: 1.6px;
         color: #303030;
     }
 }
