--- a/app/assets/styles/modules/_site-footer.css
+++ b/app/assets/styles/modules/_site-footer.css
@@ -11,11 +11,10 @@
     }
 
     &__title {
-
         max-width: 400px;
         font-size: 42px;
         font-weight: 400;
-        letter-spacing: .6px;
+        letter-spacing: -.5px;
         margin-bottom: 40px;
         /* text-transform: uppercase; */
     }
