--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -26,6 +26,7 @@
 @import 'modules/_doubleslider';
 @import 'modules/_nav-list';
 @import 'modules/_featured-work';
+@import 'modules/_bullet-list';
 
 
 @import 'page/_project';
