--- a/app/assets/styles/styles.css
+++ b/app/assets/styles/styles.css
@@ -22,7 +22,7 @@
 @import 'modules/_card';
 @import 'modules/_site-map';
 @import 'modules/_icon';
-@import 'modules/_numberbox';
+@import 'modules/_box';
 @import 'modules/_doubleslider';
 @import 'modules/_nav-list';
 @import 'modules/_featured-work';
