--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -208,10 +208,15 @@ video {
         }
 
         &--sub {
-            margin-top: 20px;
+            margin-top: 40px;
             font-size: 18px;
             font-weight: 400;
+                    letter-spacing: 0px; 
+        word-spacing: 1.6px;
+            line-height: 1.6;
+            max-width: 500px;
             opacity: .8;
+            color: #080808;
         }
 
     }
