--- a/app/assets/styles/modules/_hero.css
+++ b/app/assets/styles/modules/_hero.css
@@ -63,6 +63,24 @@ video {
         height: 646px;
     }
 
+    /* &__svg-img {
+        position: absolute;
+        left: 100px;
+        top: 0;
+        @mixin atSmall {
+            left: 50%;
+            top: 20%;  
+        }
+
+        &--herself {
+            width: 100%;
+            height: 100%;
+            mask-image: url('../../assets/images/taegeuk-pattern.svg');
+            mask-repeat: no-repeat;
+            mask-size: 80%;
+        }
+    } */
+
     .page-work--1 & {
         background-image: url('../../assets/images/work_hero_01_mine.jpg');
         background-size: cover;
@@ -159,7 +177,7 @@ video {
         &--concept {
             margin-top: 20px;
             font-size: 50px;
-            letter-spacing: -1px;
+            letter-spacing: 0px;
             font-weight: 700;
             color: $primaryCol;
             width: 200px;
@@ -222,21 +240,24 @@ video {
     }
 
     &-slider {
+        &--main {
+            top: 64%;
+            left: 32px;
+            width: 300px;
+            height: 330px;
+            clip-path: polygon(
+                1% 9%, 20% 9%, 
+                30% 45%, 
+                40% 9%, 60% 9%, 
+                70% 45%, 
+                80% 9%, 100% 9%, 
+                80% 70%, 60% 70%, 
+                50% 45%, 
+                40% 70%, 19% 70%
+            );
+        }
         position: absolute;
-        top: 64%;
-        left: 32px;
-        width: 300px;
-        height: 330px;
-        clip-path: polygon(
-            1% 9%, 20% 9%, 
-            30% 45%, 
-            40% 9%, 60% 9%, 
-            70% 45%, 
-            80% 9%, 100% 9%, 
-            80% 70%, 60% 70%, 
-            50% 45%, 
-            40% 70%, 19% 70%
-        );
+
 
         @mixin atMedium {
             top: 25%;
@@ -260,11 +281,12 @@ video {
             @mixin atMedium {
                 height: 400px;    
             }
-            .slick-active & {
-                                opacity: 1;
 
+            .slick-active & {
+                opacity: 1;
                 transform: scale(1.1);
             }
+
             &--01 {
                 background-image: url('../../assets/images/hero_01.jpg');
             }
@@ -273,6 +295,9 @@ video {
             }
             &--03 {
                 background-image: url('../../assets/images/hero_03.jpg');
+            }
+            &--04 {
+                background-image: url('../../assets/images/img_woman.jpg');
             }
         }
     }
